--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -1,3 +1,15 @@
+<head>
+    <style>
+        body {
+            background-image: url('image/dash.jpg');
+            background-size: cover;
+            background-position: center;
+             
+        }
+    </style>
+</head>
+
+
 <h6>Dashboard</h6>
 <h3>Welcome {{ name }}</h3>
 <p>Here are your stories</p>
