--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -11,12 +11,12 @@
 
 
 <h6>Dashboard</h6>
-<h3>Welcome {{ name }}</h3>
+<h3 style="color: aliceblue;">Welcome {{ name }}</h3>
 <p>Here are your stories</p>
 {{#if stories}}
 <table class="striped">
     <thead>
-        <tr>
+        <tr style="color: aliceblue;">
             
             <th>Title</th>
             <th>Date</th>
@@ -28,7 +28,7 @@
     </thead>
     <tbody>
         {{#each stories}}
-        <tr>
+        <tr style="color: aliceblue;">
             <td><a href="/stories/{{_id}}">{{title}}</a></td>
             <td>{{formatDate createdAt 'MMMM Do YYYY, h:mm:ss a'}}</td>
             <td><span class="dash-status">{{this.category}}</span></td>
