--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -12,7 +12,7 @@
 
 <h6>Dashboard</h6>
 <h3 style="color: aliceblue;">Welcome {{ name }}</h3>
-<p>Here are your stories</p>
+<p style="color: aliceblue;">Here are your stories</p>
 {{#if stories}}
 <table class="striped">
     <thead>
